--- a/web/index.html
+++ b/web/index.html
@@ -33,6 +33,37 @@
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
+
+       <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
+
+       <!-- TODO: Add SDKs for Firebase products that you want to use
+           https://firebase.google.com/docs/web/setup#available-libraries -->
+       <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-analytics.js"></script>
+       <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script>
+       <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-storage.js"></script>
+       <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-database.js"></script>
+       <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>
+       
+       <script>
+         // Your web app's Firebase configuration
+         // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+         var firebaseConfig = {
+           apiKey: "AIzaSyAq34yVQJhEmqnxV63B1t7ir1A-lOwxLCY",
+           authDomain: "blocknotes-26fee.firebaseapp.com",
+           databaseURL: "https://blocknotes-26fee.firebaseapp.com",
+           projectId: "blocknotes-26fee",
+           storageBucket: "blocknotes-26fee.appspot.com",
+           messagingSenderId: "580078030526",
+           appId: "1:580078030526:web:fce0a9e79cf49d639998ef",
+           measurementId: "G-ZC62HD27K3"
+         };
+         // Initialize Firebase
+         firebase.initializeApp(firebaseConfig);
+         firebase.analytics();
+         </script>
+
+
+
   <script>
     var serviceWorkerVersion = null;
     var scriptLoaded = false;
